# NovaEngine

./: CMakeLists.txt  README.md
NovaEngine/assets/: shotgun
NovaEngine/include/: ascii.h  def.h  game.h  raycast.h
NovaEngine/include/src/util/: def.h  math.h
NovaEngine/src/: ascii.c  game.c  main.c  raycast.c
NovaEngine/src/util/: math.c
docs/: design.md  notes.txt
include/: ascii.h  def.h  game.h  raycast.h
src/: ascii.c  game.c  main.c  raycast.c
